<resources>
    <string name="app_name">DealIn</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="don_t_have_">Don\'t have an account?Sign Up</string>
    <string name="have_an_account">Already have an account?Sign In</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="college">College</string>
    <string name="city">City</string>
    <string name="branch">Branch</string>

    <string name="dashboard">DASHBOARD</string>
    <string name="colleges">Colleges</string>
    <string name="user">Users</string>
    <string name="courses">Courses</string>
    <string name="stocks">Stocks</string>
    <string name="suggestions">Suggestions</string>
    <string name="locations">Locations</string>
    <string name="categories">Categories</string>
    <string name="report">Report</string>


    <string-array name="colleges">
        <item>Colleges</item>
    </string-array>
    <string-array name="cities">
        <item>Cities</item>
    </string-array>
    <string name="title_activity_college">College</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--add college popup-->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_college">Add College</string>
    <!--admin User-->
    <string name="total">Total</string>
    <string name="current">Current</string>
    <string name="location">Location</string>

    <!--user home-->
    <string name="home">Home</string>
    <string name="order">Orders</string>
    <string name="products">Products</string>
    <string name="deliver">Deliver</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>

    <!--sort by-->
    <string-array name="sortby">
        <item>Sort By</item>
        <item>By Name</item>
        <item>By Price</item>
    </string-array>
    <!--Categories-->
    <string-array name="categories">
        <item>Category</item>
        <item>Stationary</item>
        <item>Electronics</item>
    </string-array>
    <!--orders-->
    <string-array name="orders">
        <item>All orders</item>
        <item>Undelivered orders</item>
        <item>Delivered orders</item>
    </string-array>

    <!--deliveries-->
    <string-array name="deliveries">
        <item>All deliveries</item>
        <item>Undelivered</item>
        <item>Delivered</item>
    </string-array>

    <!--messages-->
    <string-array name="messages">
        <item>All Messages</item>
        <item>Unread Messages</item>
        <item>Readed Messages</item>
    </string-array>

    <!--products-->
    <string name="buy">BUY</string>

    <!--order_item-->
    <string name="product_id">ID</string>
    <string name="product_name">NAME</string>
    <string name="product_price">PRICE</string>
    <string name="product_status">STATUS</string>
    <string name="product_category">CATEGORY</string>
    <!--Transaction-->
    <string name="transaction_id">TRANSACTION\nID</string>
    <string name="product_id_full">PRODUCT\nID</string>

    <!--UserAdmin-->
    <string name="user_id">ID</string>
    <string name="user_name">NAME</string>
    <string name="user_status">STATUS</string>

    <!--project description-->
    <string name="project_description">
        Project-Type: MAJOR\n
        Project-Name: DealIn \n
        Based-On: BUY and SELL in Campus\n
        Course: BCA(2017-2020)
    </string>
    <string name="developer_words">
       I have dedicated my whole week and half in developing the app.\n
        I haven\'t sleep enough or say doesn\'t had a good sleep in previous weeks\n
        My team developer are having a good time in their homes and are not much bothered about project\n
        As they haven\'t ask me for project work or guidance. \n
        But I am very thankful to me for showing such dedication in making this app in this crucial time.\n
        Jai Shree Ram! :)\n
        -Uchiha Itachi
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
