<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_appcolor_border">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_college"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/college_popup"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_corner_rectangle"
        android:layout_height="50dp"
        android:hint="@string/college"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/city_popup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/city"
        android:background="@drawable/rounded_corner_rectangle"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="3dp"
    android:background="#FFFFFF">
    <Button
        android:id="@+id/add_college"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/appColor"
        android:layout_margin="5dp"
        android:text="@string/add" />
    <Button
        android:id="@+id/cancel_popup"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/appColor"
        android:layout_margin="5dp"
        android:text="@string/cancel" />

</LinearLayout>



</LinearLayout>