<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/admin_college_id"
        style="@style/order_item"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/user_id"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/admin_college_name"
        style="@style/order_item"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/user_name"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/admin_college_city"
        style="@style/order_item"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/city"
        android:textSize="16sp" />

</LinearLayout>