<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.stocks.Stocks">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_appcolor_border">
        <TextView
            style="@style/order_item"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_id"
            android:textSize="16sp" />

        <TextView
            style="@style/order_item"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_name"
            android:textSize="16sp" />

        <TextView
            style="@style/order_item"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_price"
            android:textSize="16sp" />

        <TextView
            style="@style/order_item"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_category"
            android:textSize="16sp"
            />

    </LinearLayout>
    <ListView
        android:id="@+id/stock_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="8dp"
        android:layout_margin="8dp"
        />


</LinearLayout>