<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.transactions.Transactions">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_corner_appcolor_border">

        <TextView
            style="@style/order_item_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:text="@string/transaction_id" />

        <TextView
            style="@style/order_item_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:text="@string/product_id_full" />

        <TextView
            style="@style/order_item_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:text="@string/product_price" />

        <TextView
            style="@style/order_item_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:text="@string/product_status" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/transaction_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" />
</LinearLayout>