<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.Register">

    <View
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/ic_register_top" />

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_top"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="7dp"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/login" />


    <EditText
        android:id="@+id/register_name"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_txt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:singleLine="true" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:singleLine="true" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="10"
        android:singleLine="true" />


    <Spinner
        android:id="@+id/register_city_spinner"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:entries="@array/cities" />

    <Spinner
        android:id="@+id/register_college_spinner"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_city_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:entries="@array/colleges" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_college_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:singleLine="true" />

    <Button
        android:id="@+id/register_but"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_bottom"
        android:layout_below="@+id/register_but"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="121dp"
        android:fontFamily="serif"
        android:gravity="top"
        android:text="@string/have_an_account"
        android:textAppearance="@style/don_t_have_"
        android:textSize="15sp" />

    <View
        android:id="@+id/register_bottom"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bottom_register" />




</RelativeLayout>