<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.user.AdminUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <TextView
            android:id="@+id/user_admin_txt"
            style="@style/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="172dp"
            android:layout_marginTop="6dp"
            android:text="@string/user" />

        <TextView
            android:id="@+id/admin_total_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_admin_txt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="9dp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/admin_total_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_admin_txt"
            android:layout_marginStart="18dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/current_user"
            android:text="123" />

        <TextView
            android:id="@+id/current_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_total_user"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="26dp"
            android:text="@string/current" />

        <TextView
            android:id="@+id/current_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_total_user"
            android:layout_marginStart="18dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/current_user"
            android:text="123" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_admin_txt"
            android:layout_marginStart="100dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/admin_total_data"
            android:text="@string/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_admin_txt"
            android:layout_marginStart="18dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/user_location"
            android:text="abc" />

        <EditText
            android:id="@+id/user_search"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_user"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="31dp"
            android:drawableLeft="@drawable/search_icon"
            android:hint="userid or name"
            android:background="@drawable/rounded_corner_rectangle"
            android:minHeight="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_user_data"
            android:layout_marginStart="20dp"
            android:layout_marginTop="29dp"
            android:minHeight="50dp"
            android:layout_toEndOf="@+id/user_search"
            android:text="search" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>


</LinearLayout>